# vehicle-controller

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
control-patches/: AGGREGAT Control.maxpat  AGGREGAT-Behringer.maxpat  Motor Control Joystick.maxpat  Motor Control Wheel.maxpat  Motor Control.maxpat  OSC-test.maxpat  SMS_Control_Angela.maxpat  SMS_Control_Elaine.maxpat  SMS_Control_Roger.maxpat  SMS_TargetSelect_sub.maxpat  SMS_Volt-Temp_sub.maxpat  motor-test.maxpat
control-patches/midimessage.gen.mxo/Contents/: Info.plist
control-patches/midimessage.gen.mxo/Contents/MacOS/: midimessage.gen
control-patches/midimessage.parse.mxo/Contents/: Info.plist
control-patches/midimessage.parse.mxo/Contents/MacOS/: midimessage.parse
puredata/: 2-motor-test.pd
setup/aggregat/etc/udev/rules.d/: 99-trinamic-motor.rules
setup/aggregat/home/pi/.config/autostart/: aggregat.desktop  motors.desktop
setup/aggregat/home/pi/Desktop/: Starte-AGGREGAT.sh  Starte-Motoren.sh
setup/rotary/home/pi/Desktop/: Starte-Motoren.sh
src/: main.cpp  motor.cpp  motor.hpp  rpi-osc-pwm.cpp  rpi-osc-stepper.cpp
src/test/: query-response.cpp
src/utils/: list_ports.c  motor-cmd.cpp  port_info.c
